# Project-2-Getting-Data-and-Analyze

./: README.md  dev.env  project2_Getting_Data.ipynb  pyproject.toml
src/project_source/: EDA.py  __init__.py  __main__.py  api.py  cli.py  web_scraping.py  xml_parsing.py
